# product_kpi

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  config.yml  main.py  pyproject.toml  sync_notion.py  update_duckdb.py
.claude/skills/bonsai-cleanup/: SKILL.md
.github/workflows/: lint.yml
auto/: docker_deploy.sh  setup.bash  setup_cloudrun.sh  setup_scheduler.sh
charts/: plot_keiei_company_feature_heatmap.py  plot_keiei_company_feature_weekly.py  plot_keiei_feature_trend.py  plot_keiei_tier_health_trend_weekly.py  plot_process_creation_trend.py  plot_work_attendance_n_reports.py  plot_work_company_feature_heatmap.py  plot_work_company_feature_weekly.py  plot_work_mini_tier_health_trend_weekly.py  plot_work_minicompany_feature_heatmap.py  plot_work_minicompany_feature_weekly.py  plot_work_photo_n_directory_trend.py  plot_work_tier_health_trend_weekly.py  plot_work_user_trend.py  plot_xproduct_company_score_heatmap.py  plot_xproduct_company_score_weekly.py  plot_xproduct_segment_trend.py  plot_xproduct_segment_trend_quarterly.py  plot_xproduct_segment_trend_weekly.py  plot_xproduct_tier_health_trend_weekly.py  plot_xproduct_tier_trend.py  trial_cross_product_kpi.py
charts/scratch/: README.md
collections/: keiei_output1_loyalty_distribution.sql  keiei_output2_feature_health_summary.sql  keiei_output3_loyalty_trend.sql  monthly_kpi.sql  output1_loyalty_distribution.sql  output4_feature_health_trend.sql  output5_company_feature_matrix.sql  output7_cross_product_trend.sql
collections/bigquery/cross_product/: cross_product_company_weekly.sql  cross_product_matrix_time_series.sql
collections/bigquery/keiei/: keiei_output4_feature_health_trend.sql  single_product_usage_timeseries.sql
collections/bigquery/kpi/: output2_feature_health_summary.sql  output3_loyalty_trend.sql  output5_company_feature_matrix.sql  output6_cross_product_matrix.sql
collections/bigquery/work/: single_product_usage_timeseries.sql
collections/notion/cross_product/: cross_product_combined_matrix.sql  cross_product_matrix_time_series.sql  cross_product_weekly_matrix.sql
collections/notion/keiei/: single_product_matrix.sql  single_product_usage_timeseries.sql
collections/notion/work/: single_product_matrix.sql  single_product_usage_timeseries.sql
collections/notion/work_mini/: single_product_matrix.sql
docs/: benchmark_custormer.csv  cas_active_customers.csv  cross_product_kpi.md  cross_product_kpi_説明.md  dev_steps_notion_plotly.md  handoff_active_company_count.md  implementation_spec.md  known_issues.md  sf_active_customers.csv  sf_cas_merged_customers.csv  sf_unmatched_customers.csv  single_product_kpi.md  tier_health_score_definitions.md  work_status_202606.csv
kpi/: build_context.py  charts.py  cli.py  companies.py  company_loyalty.py  config.py  contracts.py  cross_product.py  customer_lifecycle.py  db.py  feature_health.py  heatmap.py  keiei_user_history.py  monthly_kpi.py  notion_sync.py  redash.py  sf_customers.py  single_product.py  users.py  work_process_id_generator.py  work_user_history.py  working_days.py
kpi/templates/: heatmap_name_col.html  heatmap_sticky_header.html  heatmap_widget.html
schema/: mysql_notes.md  salesforce.md
scripts/: explore_login_tables.py  investigate_whiteboard.py  plot_xproduct_segment_trend.py  trial_cross_product_kpi.py
tests/: conftest.py  helpers.py  test_company_loyalty.py  test_config.py  test_cross_product.py  test_customer_lifecycle.py  test_feature_health.py  test_integration.py  test_single_product.py
