[project]
name = "get-kpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hint enforcement)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "ERA", # eradicate (no commented-out code)
    "PTH", # use pathlib over os.path
]
ignore = [
    "ANN204", # missing return type for __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
