[project]
name = "product_kpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "google-cloud-bigquery>=3.42.0",
    "google-cloud-storage>=3.1.0",
    "httpx>=0.28.1",
    "jpholiday>=1.0.3",
    "notion-client>=3.1.0",
    "pandas>=3.0.3",
    "pandas-gbq>=0.35.0",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "tqdm>=4.68.3",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["kpi*"]

[project.scripts]
kpi-update    = "kpi.cli:update_duckdb"
kpi-bq-update = "kpi.cli:bq_update"
kpi-sync      = "kpi.cli:sync_notion"
kpi-export    = "kpi.cli:export_csv"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.0.0",
    "pytest>=9.1.0",
    "ruff>=0.11.0",
    "types-tqdm>=4.68.0.20260608",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hint enforcement)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20", # flake8-print (print 禁止 → logging を使う)
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "ERA", # eradicate (no commented-out code)
    "PTH", # use pathlib over os.path
]
ignore = [
    "ANN204", # missing return type for __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "RUF003"]
"charts/**" = ["ANN", "C408", "E501", "RUF001", "RUF002", "RUF003", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["google.cloud.*", "notion_client.*", "plotly.*"]
ignore_missing_imports = true
